CHANGES PDF INGESTION ADDED

--- a/notebooks/gcp_resource_setup.ipynb
+++ b/notebooks/gcp_resource_setup.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "a4843d02",
    "metadata": {},
    "outputs": [],
@@ -14,10 +14,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "855b44cf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bucket: speak-aura-ai-audio\n",
+      "Service Account Key File Path: ../credentials/bhack-471114-2b12cc8d7377.json\n"
+     ]
+    }
+   ],
    "source": [
     "PROJECT_ID = os.getenv(\"PROJECT_ID\")\n",
     "PROJECT_NUMBER = os.getenv(\"PROJECT_NUMBER\")\n",
@@ -102,10 +111,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "1d7dda69",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Service Account for connection: bqcx-962614496383-lb5t@gcp-sa-bigquery-condel.iam.gserviceaccount.com\n"
+     ]
+    }
+   ],
    "source": [
     "# Step 3: Get the Service Account for the connection\n",
     "SERVICE_ACCT = !bq show --format=prettyjson --connection us.{CONNECTION_ID} | grep \"serviceAccountId\" | cut -d '\"' -f 4\n",
@@ -137,6 +154,60 @@
     "!gcloud projects add-iam-policy-binding {PROJECT_ID} \\\n",
     "    --member=\"serviceAccount:{SERVICE_ACCT_EMAIL}\" \\\n",
     "    --role='roles/bigquery.connectionUser'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "f43a525a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Operation \"operations/acat.p2-962614496383-1b0e7614-834b-41c5-bad7-20076319a41a\" finished successfully.\n"
+     ]
+    }
+   ],
+   "source": [
+    "!gcloud services enable documentai.googleapis.com\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cab4a034",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!gcloud projects add-iam-policy-binding {PROJECT_ID} \\\n",
+    "    --member=\"serviceAccount:{SERVICE_ACCT_EMAIL}\" \\\n",
+    "    --role='roles/documentai.viewer'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8c5e7bae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!gcloud projects add-iam-policy-binding {PROJECT_ID} \\\n",
+    "    --member=\"serviceAccount:{SERVICE_ACCT_EMAIL}\" \\\n",
+    "    --role=\"roles/documentai.admin\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d08f2d8a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!gcloud projects add-iam-policy-binding {PROJECT_ID} \\\n",
+    "    --member=\"serviceAccount:{SERVICE_ACCT_EMAIL}\" \\\n",
+    "    --role='roles/storage.objectViewer'"
    ]
   },
   {
