--- a/notebooks/gcp_resource_setup.ipynb
+++ b/notebooks/gcp_resource_setup.ipynb
@@ -2,19 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 34,
    "id": "a4843d02",
    "metadata": {},
    "outputs": [],
    "source": [
     "from dotenv import load_dotenv\n",
     "load_dotenv()\n",
-    "import os"
+    "import os\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 35,
    "id": "855b44cf",
    "metadata": {},
    "outputs": [
@@ -22,8 +22,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Bucket: speak-aura-ai-audio\n",
-      "Service Account Key File Path: ../credentials/bhack-471114-2b12cc8d7377.json\n"
+      "Bucket: speak-aura-ai-bucket\n",
+      "Service Account Key File Path: ../credentials/hackathon-project-472403-aa5f6655c636.json\n"
      ]
     }
    ],
@@ -48,15 +48,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
+   "id": "50137311",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    Credentialed Accounts\n",
+      "ACTIVE  ACCOUNT\n",
+      "*       bidda.ai2206@gmail.com\n",
+      "\n",
+      "To set the active account, run:\n",
+      "    $ gcloud config set account `ACCOUNT`\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "!gcloud auth list"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6728a89c",
+   "metadata": {},
+   "source": [
+    "### If account not logged in use this below 2 steps to continue or other wise go to step 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "f114b107",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "^C\n"
+     ]
+    }
+   ],
    "source": [
-    "# ============================================\n",
-    "# Notebook: BigQuery & Vertex AI Service Setup\n",
-    "# ============================================\n",
-    "\n",
     "# Cell 1: Authenticate to Google Cloud (manual login)\n",
     "# Only needed if you are running this locally, not in Colab Enterprise\n",
     "!gcloud auth login"
@@ -64,20 +100,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "432c902c",
+   "execution_count": 9,
+   "id": "9b6ba355",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Updated property [core/account].\n"
+     ]
+    }
+   ],
    "source": [
     "!gcloud config set account {MAIN_ACCOUNT_ID}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "65096249",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Updated property [core/project].\n"
+     ]
+    }
+   ],
    "source": [
     "# Step 1: Set your project ID\n",
     "!gcloud config set project {PROJECT_ID}"
@@ -85,10 +137,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
+   "id": "6f6bfc7c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hackathon-project-472403\n"
+     ]
+    }
+   ],
+   "source": [
+    "!gcloud config get-value project"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "id": "a30b12c7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Activated service account credentials for: [hp-947@hackathon-project-472403.iam.gserviceaccount.com]\n"
+     ]
+    }
+   ],
    "source": [
     "# Cell 3: Activate service account using key file\n",
     "# Make sure you have the JSON key at the specified path\n",
@@ -97,10 +175,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "7776edb8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Connection 389325321804.us.speak_aura_connection successfully created\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# Step 2: Create a BigQuery Cloud resource connection\n",
@@ -111,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "id": "1d7dda69",
    "metadata": {},
    "outputs": [
@@ -119,7 +205,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Service Account for connection: bqcx-962614496383-lb5t@gcp-sa-bigquery-condel.iam.gserviceaccount.com\n"
+      "Service Account for connection: bqcx-389325321804-yifq@gcp-sa-bigquery-condel.iam.gserviceaccount.com\n"
      ]
     }
    ],
@@ -132,14 +218,86 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "id": "a32acd8b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Operation \"operations/acat.p2-389325321804-a6ecc2d2-7bd1-440d-9717-098796fd6dbd\" finished successfully.\n"
+     ]
+    }
+   ],
+   "source": [
+    "!gcloud services enable cloudresourcemanager.googleapis.com"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "f43a525a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Operation \"operations/acat.p2-389325321804-bb2be877-e2a7-4f79-a8e9-bc75f9bdad1c\" finished successfully.\n"
+     ]
+    }
+   ],
+   "source": [
+    "!gcloud services enable documentai.googleapis.com"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "17225feb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Operation \"operations/acat.p2-389325321804-c76c1341-afd6-4e4f-a3e3-304260351401\" finished successfully.\n"
+     ]
+    }
+   ],
+   "source": [
+    "!gcloud services enable aiplatform.googleapis.com"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "2e3327ad",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Operation \"operations/acat.p2-389325321804-444f0b06-b8fe-49ff-bbb1-7090e174c812\" finished successfully.\n"
+     ]
+    }
+   ],
+   "source": [
+    "!gcloud services enable speech.googleapis.com"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "38baab09",
+   "id": "e4826ae2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Grant IAM permission to the service account on your GCS bucket\n",
-    "# This allows BigQuery/Vertex AI to access audio files\n",
-    "!gsutil iam ch serviceAccount:{SERVICE_ACCT_EMAIL}:roles/storage.objectViewer gs://speak-aura-ai-audio"
+    "!gcloud projects add-iam-policy-binding {PROJECT_ID} \\\n",
+    "    --member=\"serviceAccount:{SERVICE_ACCT_EMAIL}\" \\\n",
+    "    --role=\"roles/speech.client\""
    ]
   },
   {
@@ -149,29 +307,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Step 4: Grant the necessary IAM roles for Vertex AI access\n",
-    "\n",
     "!gcloud projects add-iam-policy-binding {PROJECT_ID} \\\n",
     "    --member=\"serviceAccount:{SERVICE_ACCT_EMAIL}\" \\\n",
     "    --role='roles/bigquery.connectionUser'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "f43a525a",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Operation \"operations/acat.p2-962614496383-1b0e7614-834b-41c5-bad7-20076319a41a\" finished successfully.\n"
-     ]
-    }
-   ],
-   "source": [
-    "!gcloud services enable documentai.googleapis.com\n"
    ]
   },
   {
@@ -207,6 +345,18 @@
    "source": [
     "!gcloud projects add-iam-policy-binding {PROJECT_ID} \\\n",
     "    --member=\"serviceAccount:{SERVICE_ACCT_EMAIL}\" \\\n",
+    "    --role='roles/storage.admin'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "190eebc4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!gcloud projects add-iam-policy-binding {PROJECT_ID} \\\n",
+    "    --member=\"serviceAccount:{SERVICE_ACCT_EMAIL}\" \\\n",
     "    --role='roles/storage.objectViewer'"
    ]
   },
@@ -237,6 +387,85 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ad98114d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!gcloud projects add-iam-policy-binding {PROJECT_ID} \\\n",
+    "    --member=\"serviceAccount:{SERVICE_ACCT_EMAIL}\" \\\n",
+    "    --role='roles/bigquery.jobUser'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7150b146",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!gcloud projects add-iam-policy-binding {PROJECT_ID} \\\n",
+    "    --member=\"serviceAccount:{SERVICE_ACCT_EMAIL}\" \\\n",
+    "    --role='roles/bigquery.dataViewer'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "05b3c6e0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from google.cloud import storage\n",
+    "import os\n",
+    "from pathlib import Path\n",
+    "from google.oauth2 import service_account\n",
+    "\n",
+    "# If your notebook is at speak/notebooks/, and the credentials live at speak/credentials/hack36.json\n",
+    "service_account_file = (Path.cwd() / \"..\" / \"credentials\" / \"hackathon-project-472403-aa5f6655c636.json\").resolve()\n",
+    "\n",
+    "# sanity check\n",
+    "if not service_account_file.exists():\n",
+    "    raise FileNotFoundError(f\"Service account file not found: {service_account_file}\")\n",
+    "\n",
+    "# create credentials\n",
+    "credentials = service_account.Credentials.from_service_account_file(\n",
+    "    str(service_account_file),\n",
+    "    scopes=[\"https://www.googleapis.com/auth/cloud-platform\"],\n",
+    ")\n",
+    "\n",
+    "storage_client = storage.Client(credentials=credentials, project=credentials.project_id)\n",
+    "\n",
+    "def create_gcs_bucket():\n",
+    "    bucket_name = BUCKET_NAME\n",
+    "    bucket = storage_client.bucket(bucket_name)\n",
+    "    if not bucket.exists():\n",
+    "        storage_client.create_bucket(bucket, location=DATASET_LOCATION)\n",
+    "        print(f\"✅ Created bucket {bucket_name}\")\n",
+    "    else:\n",
+    "        print(f\"ℹ️ Bucket {bucket_name} already exists\")\n",
+    "    return bucket\n",
+    "\n",
+    "create_gcs_bucket()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "38baab09",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Grant IAM permission to the service account on your GCS bucket\n",
+    "# This allows BigQuery/Vertex AI to access audio files\n",
+    "\n",
+    "# Run this command after you created the bucket in Cloud storage and paste the name here !\n",
+    "\n",
+    "!gsutil iam ch serviceAccount:{SERVICE_ACCT_EMAIL}:roles/storage.objectViewer gs://{BUCKET_NAME}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "6fd1018e",
    "metadata": {},
    "outputs": [],
@@ -262,11 +491,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec044677",
+   "id": "af5b095d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "!gcloud projects get-iam-policy {PROJECT_ID}"
+    "# !gcloud components install alpha --quiet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "3727931a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Listed 0 items.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# !gcloud alpha ml speech recognizers list \\\n",
+    "#     --project=hackathon-project-472403 \\\n",
+    "#     --location=us-central1"
    ]
   },
   {
@@ -276,6 +525,16 @@
    "source": [
     "## Cleaning Up\n",
     "### To clean up all Google Cloud resources used in this project"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ec044677",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!gcloud projects get-iam-policy {PROJECT_ID}"
    ]
   },
   {
