--- a/notebooks/gcp_resource_setup.ipynb
+++ b/notebooks/gcp_resource_setup.ipynb
@@ -556,6 +556,29 @@
     "# # Delete the BigQuery dataset\n",
     "# ! bq rm -r -f {PROJECT_ID}:{DATASET_ID}"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f4658c1d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# gcloud auth application-default revoke\n",
+    "\n",
+    "# gcloud init\n",
+    "\n",
+    "# 1] Re-initialize this configuration [default] with new settings\n",
+    "\n",
+    "# Login \n",
+    "\n",
+    "# choose created project\n",
+    "\n",
+    "# gcloud auth application-default login\n",
+    "\n",
+    "# gcloud cheat-sheet \n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
