--- a/notebooks/gcp_resource_setup.ipynb
+++ b/notebooks/gcp_resource_setup.ipynb
@@ -2,31 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "a4843d02",
    "metadata": {},
    "outputs": [],
    "source": [
     "from dotenv import load_dotenv\n",
     "load_dotenv()\n",
-    "import os\n"
+    "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "855b44cf",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Bucket: speak-aura-ai-bucket\n",
-      "Service Account Key File Path: ../credentials/hackathon-project-472403-aa5f6655c636.json\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "PROJECT_ID = os.getenv(\"PROJECT_ID\")\n",
     "PROJECT_NUMBER = os.getenv(\"PROJECT_NUMBER\")\n",
@@ -48,24 +39,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "50137311",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "    Credentialed Accounts\n",
-      "ACTIVE  ACCOUNT\n",
-      "*       bidda.ai2206@gmail.com\n",
-      "\n",
-      "To set the active account, run:\n",
-      "    $ gcloud config set account `ACCOUNT`\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!gcloud auth list"
    ]
@@ -75,23 +52,15 @@
    "id": "6728a89c",
    "metadata": {},
    "source": [
-    "### If account not logged in use this below 2 steps to continue or other wise go to step 5"
+    "### If main account not logged in use this below 2 steps to continue or other wise go to step 5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "f114b107",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "^C\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Cell 1: Authenticate to Google Cloud (manual login)\n",
     "# Only needed if you are running this locally, not in Colab Enterprise\n",
@@ -100,36 +69,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "9b6ba355",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Updated property [core/account].\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!gcloud config set account {MAIN_ACCOUNT_ID}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "65096249",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Updated property [core/project].\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Step 1: Set your project ID\n",
     "!gcloud config set project {PROJECT_ID}"
@@ -137,36 +90,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "6f6bfc7c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "hackathon-project-472403\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!gcloud config get-value project"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "a30b12c7",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Activated service account credentials for: [hp-947@hackathon-project-472403.iam.gserviceaccount.com]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Cell 3: Activate service account using key file\n",
     "# Make sure you have the JSON key at the specified path\n",
@@ -174,21 +111,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "80a5c95a",
+   "metadata": {},
+   "source": [
+    "#### Make sure your current service account is activated"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
+   "id": "819b1b91",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!gcloud auth list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "7776edb8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Connection 389325321804.us.speak_aura_connection successfully created\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "\n",
     "# Step 2: Create a BigQuery Cloud resource connection\n",
     "# This allows BigQuery to talk to Vertex AI\n",
     "!bq mk --connection --location=us \\\n",
@@ -197,18 +143,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "1d7dda69",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Service Account for connection: bqcx-389325321804-yifq@gcp-sa-bigquery-condel.iam.gserviceaccount.com\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Step 3: Get the Service Account for the connection\n",
     "SERVICE_ACCT = !bq show --format=prettyjson --connection us.{CONNECTION_ID} | grep \"serviceAccountId\" | cut -d '\"' -f 4\n",
@@ -218,74 +156,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "a32acd8b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Operation \"operations/acat.p2-389325321804-a6ecc2d2-7bd1-440d-9717-098796fd6dbd\" finished successfully.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!gcloud services enable cloudresourcemanager.googleapis.com"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "f43a525a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Operation \"operations/acat.p2-389325321804-bb2be877-e2a7-4f79-a8e9-bc75f9bdad1c\" finished successfully.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!gcloud services enable documentai.googleapis.com"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "17225feb",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Operation \"operations/acat.p2-389325321804-c76c1341-afd6-4e4f-a3e3-304260351401\" finished successfully.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!gcloud services enable aiplatform.googleapis.com"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "2e3327ad",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Operation \"operations/acat.p2-389325321804-444f0b06-b8fe-49ff-bbb1-7090e174c812\" finished successfully.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!gcloud services enable speech.googleapis.com"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bf2bd5df",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!gcloud projects add-iam-policy-binding {PROJECT_ID} \\\n",
+    "  --member=\"serviceAccount:{SERVICE_ACCOUNT_KEY_ID}\" \\\n",
+    "  --role=\"roles/storage.admin\""
    ]
   },
   {
@@ -421,7 +339,8 @@
     "from google.oauth2 import service_account\n",
     "\n",
     "# If your notebook is at speak/notebooks/, and the credentials live at speak/credentials/hack36.json\n",
-    "service_account_file = (Path.cwd() / \"..\" / \"credentials\" / \"hackathon-project-472403-aa5f6655c636.json\").resolve()\n",
+    "\n",
+    "service_account_file = (Path.cwd() / SERVICE_ACCOUNT_KEY_FILE_PATH).resolve()\n",
     "\n",
     "# sanity check\n",
     "if not service_account_file.exists():\n",
@@ -456,11 +375,7 @@
    "outputs": [],
    "source": [
     "# Grant IAM permission to the service account on your GCS bucket\n",
-    "# This allows BigQuery/Vertex AI to access audio files\n",
-    "\n",
-    "# Run this command after you created the bucket in Cloud storage and paste the name here !\n",
-    "\n",
-    "!gsutil iam ch serviceAccount:{SERVICE_ACCT_EMAIL}:roles/storage.objectViewer gs://{BUCKET_NAME}"
+    "!gsutil iam ch serviceAccount:{SERVICE_ACCOUNT_KEY_ID}:roles/storage.objectViewer gs://{BUCKET_NAME}"
    ]
   },
   {
@@ -500,18 +415,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "id": "3727931a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Listed 0 items.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# !gcloud alpha ml speech recognizers list \\\n",
     "#     --project=hackathon-project-472403 \\\n",
